Update docs: remove cheesy tone, add v2 info, fix versions

--- a/pages/ecosystem/overview.mdx
+++ b/pages/ecosystem/overview.mdx
@@ -8,7 +8,7 @@ Create the most user-friendly, efficient, and privacy-preserving DeFi experience
 
 ## Ecosystem Components
 
-### 🔄 hx.finance - The DEX
+### hx.finance - The DEX
 **Status**: Live
 
 The heart of our ecosystem - a community-owned DEX with:
@@ -17,22 +17,31 @@ The heart of our ecosystem - a community-owned DEX with:
 - Points-to-token fair launch model
 - Deep integration with other products
 
-[Start Trading →](https://app.hx.finance)
+[Start Trading](https://app.hx.finance)
 
-### 🛡️ innocence.is - Privacy Layer
+### hx.finance V2 - Next Generation
+**Status**: Beta launching post-TGE
+
+Enhanced architecture for superior performance:
+- Significantly improved swap execution times
+- Reduced gas fees
+- Optimized for Hyperliquid's infrastructure
+- Backward compatible with V1 liquidity
+
+*Beta access coming soon*
+
+### innocence.is - Privacy Layer
 **Status**: Development
 
-Revolutionary privacy infrastructure that enables:
+Privacy infrastructure that enables:
 - Private trading without compromising execution
 - Anonymous liquidity provision
 - Compliance-first approach
 - Leverages Hyperliquid's unique architecture
 
-*"Trade privately at CEX speeds"*
+[Learn More](https://innocence.is)
 
-[Learn More →](https://innocence.is)
-
-### 📱 HyperMoon - Trading Platform
+### HyperMoon - Trading Platform
 **Status**: Live (Android), iOS coming
 
 Professional trading interface featuring:
@@ -41,9 +50,9 @@ Professional trading interface featuring:
 - Direct hx.finance integration
 - Privacy features (coming with innocence.is)
 
-[Download →](https://hypermoon.app)
+[Download](https://hypermoon.app)
 
-### 🎨 NFT Collections
+### NFT Collections
 **Status**: Launching Soon
 
 Two collections with real utility:
@@ -93,9 +102,9 @@ Central to the ecosystem:
 
 ### For Users
 - **Complete Solution**: Trade, earn, and maintain privacy
-- **Best Execution**: Hyperliquid's speed + our liquidity
 - **Mobile First**: Full features on any device
 - **Community Owned**: Your voice matters
+- **Fair Launch**: No insider advantages
 
 ### For Hyperliquid
 - **Ecosystem Growth**: More users and liquidity
@@ -122,28 +131,28 @@ We're building bridges with other Hyperliquid projects that share our values:
 ## Development Roadmap
 
 ### Q1 2025
-- ✅ hx.finance launch
-- ✅ Points system live
-- ✅ HyperMoon Android
-- 🔄 Ecosystem partnerships
+- hx.finance launch
+- Points system live
+- HyperMoon Android
+- Ecosystem partnerships
 
 ### Q2 2025
-- 📅 hx.finance token launch
-- 📅 innocence.is beta
-- 📅 NFT collections
-- 📅 HyperMoon iOS
+- hx.finance token launch
+- innocence.is beta
+- NFT collections
+- HyperMoon iOS
 
 ### Q3 2025
-- 📅 Full privacy integration
-- 📅 Advanced trading features
-- 📅 Governance launch
-- 📅 Institutional tools
+- Full privacy integration
+- Advanced trading features
+- Governance launch
+- Institutional tools
 
 ### Q4 2025 & Beyond
 - Cross-chain expansion
 - Advanced DeFi primitives
 - Mobile wallet
-- More surprises!
+- Additional features
 
 ## Get Involved
 
@@ -185,10 +194,10 @@ Everything we build prioritizes:
 - [innocence.is](https://innocence.is)
 - [hypermoon.app](https://hypermoon.app)
 
-## Join the Revolution
+## Get Started
 
-We're building the future of DeFi on Hyperliquid - decentralized, efficient, and private. Join us in creating a financial system that works for everyone.
+Join us in building decentralized, efficient, and private DeFi on Hyperliquid.
 
-**Start earning points today** and be part of the fair launch that sets the standard for Hyperliquid DeFi.
+**Start earning points today** through the fair launch model.
 
-[Get Started →](https://app.hx.finance)
+[Get Started](https://app.hx.finance)
