--- a/pages/getting-started/connect-wallet.mdx
+++ b/pages/getting-started/connect-wallet.mdx
@@ -4,13 +4,14 @@
 
 hx.finance supports all major EVM wallets:
 
-- **MetaMask** - Most widely used
+- **Rabby** - Best user experience and security
 - **WalletConnect** - Compatible with 100+ wallets
-- **Coinbase Wallet** - Mobile and browser extension
 - **Rainbow** - User-friendly interface
+- **MetaMask** - Widely supported
+- **Coinbase Wallet** - Mobile and browser extension
 - **Trust Wallet** - Popular mobile wallet
 
-Need a wallet? [Download MetaMask](https://metamask.io)
+Need a wallet? [Download Rabby](https://rabby.io)
 
 ## Connection Steps
 
@@ -71,17 +72,30 @@ Once connected, your wallet address will appear in the top right corner.
 
 ## Security
 
-### Important Rules
+### Important Security Guidelines
+
+Based on [Xulian's (Hyperliquid co-founder) recommendations](https://x.com/xulian_hl/status/1931291343265144896) for Hyperliquid users:
+
+**Wallet Security Best Practices:**
+- Use a dedicated wallet for Hyperliquid/DeFi activities
 - Never share your seed phrase with anyone
 - Always verify the URL: https://app.hx.finance
 - Look for HTTPS padlock in browser
-- Bookmark the official site
+- Bookmark the official site to avoid phishing
 
-### Common Scams
-- DMs requesting seed phrases
-- Fake URLs (hx-finance.com, etc.)
-- Pop-ups asking for private keys
-- Unrealistic offers or returns
+**Transaction Safety:**
+- Double-check recipient addresses before sending
+- Start with small test transactions
+- Be aware of transaction limits and gas costs
+- Monitor your wallet activity regularly
+
+### Common Scams to Avoid
+- DMs requesting seed phrases or private keys
+- Fake URLs (hx-finance.com, hxfinance.xyz, etc.)
+- Pop-ups asking for wallet credentials
+- "Support" personnel asking for access
+- Unrealistic returns or "double your money" schemes
+- Fake airdrops requiring wallet connections
 
 ## Mobile Access
 
