--- a/pages/getting-started/get-hype.mdx
+++ b/pages/getting-started/get-hype.mdx
@@ -37,14 +37,6 @@ If you prefer CEXs, HYPE is listed on:
 
 After purchasing, withdraw directly to your Hyperliquid EVM address.
 
-### Option 4: Bridge from Ethereum
-
-1. Visit the [Hyperliquid Bridge](https://bridge.hyperliquid.xyz)
-2. Connect your wallet on Ethereum
-3. Enter the amount of ETH to bridge
-4. Approve and confirm the transaction
-5. Wait ~10 minutes for the bridge to complete
-6. You'll receive HYPE on Hyperliquid
 
 ## Converting HYPE to WHYPE
 
@@ -87,12 +79,12 @@ For advanced users, you can interact directly with the WHYPE contract:
 3. Confirm transaction
 4. Done! Your HYPE is restored
 
-## Pro Tips
+## Important Notes
 
-- **Keep some HYPE unwrapped** for gas fees
-- **Wrapping is instant** and costs minimal gas
-- **You can wrap/unwrap anytime** with no fees (except gas)
-- **WHYPE is required** for all trading pairs
+- Keep some HYPE unwrapped for gas fees
+- Wrapping is instant and costs minimal gas
+- You can wrap/unwrap anytime with no fees (except gas)
+- WHYPE is required for all trading pairs
 
 ## Common Issues
 
@@ -105,10 +97,6 @@ For advanced users, you can interact directly with the WHYPE contract:
 - Try reducing the amount slightly
 - Refresh and try again
 
-### Bridge Taking Too Long
-- Ethereum → Hyperliquid usually takes 10-15 minutes
-- Check bridge status on explorer
-- Contact support if over 1 hour
 
 ## Next Steps
 
