--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-# Welcome to hx.finance 👋
+# Welcome to hx.finance
 
 A community-owned DEX built on Hyperliquid.
 
@@ -8,16 +8,16 @@ hx.finance is a decentralized exchange with a fair launch model. 33% of tokens a
 
 ### Key Features
 
-**Fast Trading** ⚡
+**Fast Trading**
 Benefit from Hyperliquid's high-performance blockchain infrastructure.
 
-**Points System** 🏆
+**Points System**
 Earn points for trading and providing liquidity. Points convert to hx.finance tokens at launch.
 
-**Native to Hyperliquid** 🛠️
+**Native to Hyperliquid**
 Built specifically for the Hyperliquid ecosystem with optimized performance.
 
-## Getting Started 🚀
+## Getting Started
 
 ### New Users
 - **[Connect Your Wallet](/getting-started/connect-wallet)** - Set up your wallet connection
@@ -29,7 +29,7 @@ Built specifically for the Hyperliquid ecosystem with optimized performance.
 - **[Understanding Points](/points-rewards/how-points-work)** - Learn about the rewards system
 - **[Explore the Ecosystem](/ecosystem/overview)** - Discover related projects
 
-## Fair Launch Model 🌟
+## Fair Launch Model
 
 ### Token Distribution
 - **33% to Points Holders** - Community allocation
@@ -38,10 +38,10 @@ Built specifically for the Hyperliquid ecosystem with optimized performance.
 
 ### Ecosystem Projects
 - **innocence.is** - Privacy-focused trading (coming soon)
-- **HyperMoon** - Mobile trading application 📱
+- **HyperMoon** - Mobile trading application
 - **NFT Collections** - Utility-focused NFTs
 
-## Quick Stats Dashboard 📊
+## Quick Reference
 
 | What | How Much |
 |------|----------|
@@ -51,7 +51,7 @@ Built specifically for the Hyperliquid ecosystem with optimized performance.
 | Min Gas Balance | ~0.1 HYPE |
 | Block Time | ~2 seconds |
 
-## Community & Support 🤝
+## Community & Support
 
 - **[Discord](https://discord.gg/hxfinance)** - Community discussions
 - **[Twitter](https://twitter.com/hxfinance)** - Latest updates
