--- a/pages/liquidity/becoming-lp.mdx
+++ b/pages/liquidity/becoming-lp.mdx
@@ -203,14 +203,14 @@ Position value: ~$1,414
 If held: $1,500
 IL: ~5.7% ($86)
 
-But if earned $200 in fees, still profitable!
+Fee earnings of $200 would result in net profit.
 ```
 
 ## Points & Rewards
 
 ### Base Rate
 - 0.24 points per dollar per day
-- $1,000 position = 240 points/day
+- Example: $1,000 position = 240 points/day
 
 ### With Multipliers
 - Tier 2 (1.1x): 264 points/day
@@ -232,32 +232,18 @@ But if earned $200 in fees, still profitable!
 - High management overhead
 
 ### Ignoring Gas Costs
-- Frequent adjustments eat profits
+- Frequent adjustments reduce profits
 - Batch operations when possible
 
 ### Wrong Pool Selection
-- Low volume = low fees
+- Low volume results in low fees
 - Check historical data
-- Avoid dead pools
+- Avoid inactive pools
 
 ### Emotional Decisions
-- Panic adjusting
-- FOMO into pools
-- Ignoring plan
-
-## Tools & Resources
-
-### Position Manager
-- Track all positions
-- Fee calculator
-- Range visualizer
-- Historical performance
-
-### Analytics
-- Pool APYs
-- Volume trends
-- Price charts
-- IL calculator
+- Hasty adjustments
+- Impulsive pool selection
+- Deviating from strategy
 
 ## FAQs
 
@@ -265,17 +251,16 @@ But if earned $200 in fees, still profitable!
 A: $100 minimum, $1,000+ recommended for meaningful returns
 
 **Q: Can I lose money?**
-A: Yes, through impermanent loss, but fees often compensate
+A: Yes, through impermanent loss, though fees often compensate
 
 **Q: How often should I collect fees?**
-A: When fees > gas costs, typically weekly/monthly
+A: When fees exceed gas costs, typically weekly or monthly
 
 **Q: Best pool for beginners?**
 A: WHYPE/USDE with ±30% range
 
 ## Next Steps
 
-Ready to dive deeper?
 - [Managing Positions](/docs/liquidity/managing-positions)
 - [Understanding Fees](/docs/liquidity/understanding-fees)
 - [Advanced LP Strategies](/docs/liquidity/advanced-strategies)
