--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -1,23 +1,21 @@
-# How Points Work 🏆
+# How Points Work
 
-Welcome to the most rewarding DEX in the game! Here's everything you need to know about earning your slice of the hx.finance token pie.
+Learn how the points system works and how points convert to hx.finance tokens at launch.
 
-## The Big Picture 🎯
+## Overview
 
-Points = Your share of hx.finance tokens at launch. It's that simple!
+Points determine your share of hx.finance tokens at launch.
 
-- **Earn by trading** 💱
-- **Earn by providing liquidity** 💧
-- **Multiply with tiers** 📈
-- **Convert to hx.finance tokens at TGE** 🪙
+- **Earn by trading**
+- **Earn by providing liquidity**
+- **Multiply with tiers**
+- **Convert to hx.finance tokens at TGE**
 
-## Two Ways to Stack Points 📊
+## Two Ways to Earn Points
 
-### 1. Trading Points ⚡
+### 1. Trading Points
 **Rate: 0.01 points per dollar traded**
 **Minimum: $10 per trade to earn points**
-
-Every swap counts! Whether you're trading $10 or $10,000, you're earning.
 
 ```
 Examples:
@@ -26,49 +24,42 @@ $1,000 swap = 10 points
 $10,000 swap = 100 points
 ```
 
-### 2. Liquidity Points 💎
+### 2. Liquidity Points
 **Rate: 0.24 points per dollar per day**
-
-This is where it gets juicy! Park your liquidity and earn while you sleep.
 
 ```
 Examples:
-$1,000 in pools = 240 points/day = 7,200 points/month!
-$10,000 in pools = 2,400 points/day = 72,000 points/month!!
+$1,000 in pools = 240 points/day = 7,200 points/month
+$10,000 in pools = 2,400 points/day = 72,000 points/month
 ```
 
-## The Tier System - Level Up! 🎮
+## Tier System
 
-Your tier multiplies ALL your points. Higher tier = more points = more hx.finance tokens!
+Your tier multiplies all your points. Higher tiers provide better multipliers.
 
-### 🥉 **Bronze: Newcomer**
+### Bronze: Newcomer
 - **Range**: 0-999 points
 - **Multiplier**: 1.0x
-- *Just getting started? We all were!*
 
-### 🥈 **Silver: Active Trader**  
+### Silver: Active Trader
 - **Range**: 1,000-9,999 points
 - **Multiplier**: 1.1x (+10%)
-- *Nice! You're getting the hang of it*
 
-### 🥇 **Gold: Power User**
+### Gold: Power User
 - **Range**: 10,000-49,999 points
 - **Multiplier**: 1.25x (+25%)
-- *Now we're talking!*
 
-### 💎 **Platinum: DeFi Whale**
+### Platinum: DeFi Whale
 - **Range**: 50,000-99,999 points
 - **Multiplier**: 1.5x (+50%)
-- *Respect! You're a force to be reckoned with*
 
-### 🔥 **Diamond: Legend**
+### Diamond: Legend
 - **Range**: 100,000+ points
 - **Multiplier**: 2.0x (+100%)
-- *Absolute unit. The stuff of legends!*
 
-## How Tiers Actually Work 🤓
+## How Tiers Work
 
-**The Good News:**
+**Key Features:**
 - Tier upgrades are instant
 - You can never go down a tier
 - New multipliers apply immediately
@@ -82,15 +73,15 @@ Week 3: Hit 10,000 points → Gold unlocked!
 Next trade: Trade $100 → 1.25 points (25% bonus!)
 ```
 
-## Real-World Strategies 🧠
+## Example Strategies
 
-### The Quick Climb 🏃‍♂️
+### Quick Start
 Add $5,000 liquidity on day 1:
 - Day 1: 1,200 points → Instant Silver tier!
 - Every day after: 1,320 points (with 10% bonus)
 - Week 1 total: 9,240 points → Almost Gold!
 
-### The Steady Grind 💪
+### Steady Progress
 Trade $200 daily:
 - Month 1: ~60 points (Bronze)
 - Day 17: Hit 1,000 points → Silver achieved!
@@ -98,7 +89,7 @@ Trade $200 daily:
 - Month 6: Hit 10,000 points → Gold achieved!
 - Consistent progress!
 
-### The Hybrid Hero 🦸‍♂️
+### Combined Approach
 $2,000 liquidity + $100 daily trades:
 - Daily: 480 + 1 = 481 points (Bronze)
 - Day 3: Hit 1,000 points → Silver!
@@ -106,24 +97,7 @@ $2,000 liquidity + $100 daily trades:
 - Day 20: Hit 10,000 points → Gold!
 - Daily after: 601 points/day (with 25% bonus)!
 
-## Your Points Dashboard 📱
-
-Track everything at [app.hx.finance/points](https://app.hx.finance/points):
-
-**Your Stats:**
-- Current points balance
-- Current tier & multiplier
-- Progress to next tier
-- Daily earning rate
-- Rank on leaderboard
-
-**Pro Features:**
-- Points history graph
-- Trading vs LP breakdown
-- Projected monthly earnings
-- Tier achievement badges
-
-## The Big Conversion 💰
+## Points to Token Conversion
 
 At TGE (Token Generation Event):
 - 33% of total hx.finance token supply goes to point holders
@@ -135,55 +109,52 @@ Total points: 100,000,000
 Your points: 50,000
 Your share: 0.05%
 33% supply: 330,000,000 hx.finance tokens
-You get: 165,000 hx.finance tokens! 🎉
+You get: 165,000 hx.finance tokens
 ```
 
-## Tips from the OGs 🧙‍♂️
+## Best Practices
 
-### "Time in the market beats timing the market"
-Start earning NOW. Every day you wait is points you're missing.
+### Start Early
+Every day counts towards your total points accumulation.
 
-### "LP + Trade = Maximum gains"
-Why choose? Do both for compound gains.
+### Diversify Activities
+Combine trading and liquidity provision for optimal results.
 
-### "Consistency is key"
-Daily small trades > One big trade per month
+### Stay Consistent
+Regular activity accumulates more points than sporadic large trades.
 
-### "Join the community"
-Discord members share strategies and celebrate milestones together!
+### Community Engagement
+Join Discord to learn strategies from experienced users.
 
-## Special Events & Bonuses 🎊
+## Special Events & Bonuses
 
-Keep an eye out for:
-- **Double Points Days** (2x on everything!)
-- **New Pool Bonuses** (Extra multipliers)
-- **Trading Competitions** (Bonus points for top traders)
-- **Community Challenges** (Group goals = group rewards)
+Potential bonus opportunities:
+- **Double Points Days** (2x multiplier)
+- **New Pool Bonuses** (Additional multipliers)
+- **Trading Competitions** (Extra points for top traders)
+- **Community Challenges** (Collective rewards)
 
-## FAQ Lightning Round ⚡
+## Frequently Asked Questions
 
 **Q: Do points expire?**
-A: Never! They're yours until TGE.
+A: No, points remain valid until TGE.
 
 **Q: Can I buy points?**
-A: Nope! Only earned through usage. That's the fair launch promise.
+A: No, points can only be earned through platform usage.
 
 **Q: When is TGE?**
-A: Soon™ (Follow announcements!)
+A: Follow official announcements for updates.
 
-**Q: What if I'm late to the party?**
-A: It's never too late! Start earning today.
+**Q: Can I start earning points at any time?**
+A: Yes, you can begin earning points immediately.
 
-## Your Action Plan 🚀
+## Getting Started
 
-1. **Start NOW** - Even small amounts count
-2. **Pick a strategy** - Trading, LP, or both
-3. **Stay consistent** - Daily activity compounds
-4. **Join Discord** - Community alpha is real
-5. **Have fun** - This is supposed to be enjoyable!
+1. **Begin earning** - All amounts contribute to your total
+2. **Choose your approach** - Trading, liquidity provision, or both
+3. **Maintain activity** - Regular usage maximizes accumulation
+4. **Join the community** - Discord for strategies and updates
 
 ---
-
-*Remember: We're not just building a DEX, we're building a community. And you're a huge part of it!* 💜
 
 **[Check Your Points](https://app.hx.finance/points)** | **[Start Trading](/getting-started/first-swap)** | **[Provide Liquidity](/liquidity/becoming-lp)**
