--- a/pages/token/fair-launch.mdx
+++ b/pages/token/fair-launch.mdx
@@ -130,10 +130,10 @@ Qualifying projects must:
 - Innovation
 
 ### Examples
-- Privacy protocols
 - Trading tools
 - Analytics platforms
 - DeFi primitives
+- Infrastructure projects
 
 ## Launch Timeline
 
@@ -197,7 +197,7 @@ Qualifying projects must:
 2. Connect wallet
 3. Verify allocation
 4. Click claim
-5. Tokens in wallet!
+5. Receive tokens
 
 ### Security
 - Official links only
@@ -252,7 +252,7 @@ Official channels only:
 - Discord: [discord.gg/hxfinance](https://discord.gg/hxfinance)
 - Telegram: [t.me/hxfinance](https://t.me/hxfinance)
 
-## Start Earning Points!
+## Start Earning Points
 
 Every point counts toward your allocation:
 - [Start Trading](/docs/getting-started/first-swap)
