--- a/pages/trading/how-to-swap.mdx
+++ b/pages/trading/how-to-swap.mdx
@@ -87,30 +87,12 @@ Automatically routes through multiple pools for best price:
 
 Access via the ⚙️ settings icon:
 
-**Auto Slippage** (Recommended)
-- Dynamically adjusts based on volatility
-- Prevents failed transactions
-- Optimal for most users
-
 **Custom Slippage**
 - Set your own tolerance
 - 0.1% - 0.5%: Low volatility pairs
 - 0.5% - 1%: Normal pairs
 - 1% - 5%: High volatility
-
-### Transaction Deadline
-
-- Default: 30 minutes
-- Prevents hanging transactions
-- Adjust for volatile conditions
-
-### Expert Mode
-
-Enable for:
-- No confirmation popups
-- High slippage warnings disabled
-- Faster trading flow
-- ⚠️ Use with caution
+- Default: 0.5%
 
 ## Swap Strategies
 
@@ -181,8 +163,7 @@ You Receive: 0.0517 UBTC
 Using hx.finance on mobile:
 - Full feature parity with desktop
 - Touch-optimized interface
-- Biometric authentication
-- Push notifications (coming soon)
+- Mobile wallet integration
 
 ## Troubleshooting Swaps
 
