--- a/pages/troubleshooting/faq.mdx
+++ b/pages/troubleshooting/faq.mdx
@@ -1,77 +1,77 @@
-# FAQ - We've Got Answers! 🤔
+# Frequently Asked Questions
 
-All your burning questions about hx.finance, answered by the community.
+Comprehensive answers to common questions about hx.finance.
 
-## General Questions 🌟
+## General Questions
 
-### What exactly is hx.finance?
-We're the community-owned DEX on Hyperliquid! Think Uniswap, but faster, cheaper, and with a fair launch where YOU get 33% of the tokens. No VCs, no BS, just good vibes and great tech.
+### What is hx.finance?
+hx.finance is a community-owned decentralized exchange on Hyperliquid. Built on Uniswap V3 technology, it offers efficient trading with low fees and a fair launch model where 33% of tokens are distributed to the community.
 
-### Why should I use hx.finance over other DEXs?
-- **Lightning fast** ⚡ - Quick trades on Hyperliquid
-- **Dirt cheap fees** 💸 - Gas costs are basically nothing
-- **You earn points** 🏆 - Every trade gets you closer to hx.finance tokens
-- **Fair launch** 🤝 - 33% to community, not to VCs
-- **Part of an ecosystem** 🌐 - Privacy tools and mobile apps coming!
+### Why use hx.finance?
+- **Fast execution** - Hyperliquid's high-performance infrastructure
+- **Low costs** - Minimal gas fees
+- **Points system** - Earn rewards for trading and liquidity provision
+- **Fair distribution** - 33% community allocation
+- **Ecosystem integration** - Privacy features and mobile apps in development
 
 ### Is it safe?
-Absolutely! We use battle-tested Uniswap V3 contracts, everything is non-custodial (you always control your funds), and the code is open source. Plus, no rug pulls here - we're too busy building! 🛠️
+Yes. The platform uses audited Uniswap V3 contracts with non-custodial architecture, meaning you maintain control of your funds at all times. The code is open source and verifiable.
 
-### Which wallets can I use?
-Any EVM wallet works! MetaMask is our fave, but WalletConnect, Coinbase Wallet, Rainbow, and Trust Wallet all work great too.
+### Which wallets are supported?
+All EVM-compatible wallets are supported, including Rabby, WalletConnect, Rainbow, Coinbase Wallet, MetaMask, and Trust Wallet.
 
-## Trading Questions 💱
+## Trading Questions
 
 ### What tokens can I trade?
-Right now:
-- **WHYPE** - Wrapped HYPE (the OG)
-- **USDE** - Ethena's stablecoin 
+Currently supported tokens:
+- **WHYPE** - Wrapped HYPE
+- **USDE** - Ethena USD stablecoin
 - **UETH** - Wrapped ETH
 - **UBTC** - Wrapped Bitcoin
 
-More coming soon! Got requests? Drop them in Discord!
+Additional tokens will be added based on community demand.
 
 ### What are the fees?
-Super reasonable:
-- **0.05%** for stable pairs (like USDE/USDC)
-- **0.3%** for most pairs (the sweet spot)
-- **1%** for exotic stuff
+Trading fees vary by pool:
+- **0.05%** for stable pairs (e.g., USDE/USDC)
+- **0.3%** for standard pairs
+- **1%** for volatile pairs
 
-All fees go to liquidity providers - that could be you! 👀
+All fees are distributed to liquidity providers.
 
 ### Why did my trade fail?
-Usually one of these:
-- **Not enough gas** → Keep 0.1 HYPE for fees
-- **Slippage too low** → Bump it to 1-2%
-- **Price moved** → Try again, prices update fast!
-- **Need token approval** → One-time thing for new tokens
+Common reasons:
+- **Insufficient gas** - Keep 0.1 HYPE for transaction fees
+- **Low slippage tolerance** - Increase to 1-2%
+- **Price movement** - Retry the transaction
+- **Token approval needed** - One-time approval required for new tokens
 
-### What's slippage?
-It's how much price movement you'll accept. Think of it as your "price flexibility":
-- **0.5%** = "I want exactly this price"
-- **1-2%** = "A little wiggle room is fine"
-- **5%+** = "Just get me those tokens!"
+### What is slippage?
+Slippage tolerance is the maximum price difference you'll accept between order placement and execution:
+- **0.5%** - Minimal price variance
+- **1-2%** - Standard tolerance
+- **5%+** - High tolerance for volatile conditions
 
-## Liquidity Questions 💧
+## Liquidity Questions
 
-### What's concentrated liquidity?
-Instead of spreading your money across all prices (old school), you pick a price range. It's like fishing where the fish actually are instead of the whole ocean! 🎣
+### What is concentrated liquidity?
+Concentrated liquidity allows providers to allocate capital within specific price ranges rather than across the entire price curve, resulting in higher capital efficiency.
 
 ### How much can I earn as an LP?
-Depends on:
-- **Volume** 📊 - More trades = more fees
-- **Your range** 🎯 - Tighter = higher returns (but needs more attention)
-- **Competition** 👥 - Your share of the pool
+Returns depend on:
+- **Trading volume** - Higher volume generates more fees
+- **Price range** - Narrower ranges can yield higher returns but require more management
+- **Pool competition** - Your proportional share of liquidity
 
-We've seen APYs from 20% to 200%+. Not financial advice, but... 👀
+Historical APYs have varied from 20% to over 200%.
 
-### What's impermanent loss?
-It's when the tokens you deposited change price relative to each other. Only "real" when you withdraw. Good news: fee earnings often make up for it!
+### What is impermanent loss?
+Impermanent loss occurs when the relative price of deposited tokens changes. This loss only becomes permanent upon withdrawal. Fee earnings often offset this risk.
 
 ### Can I lose money?
-Real talk: Yes, through impermanent loss or if you go out of range. But many LPs make bank from fees. Start small, learn the ropes!
+Yes, liquidity provision carries risks including impermanent loss and being out of range. However, fee earnings can compensate for these risks. Consider starting with smaller positions while learning.
 
-## Points & Token Questions 🏆
+## Points & Token Questions
 
 ### How do points work?
 Simple:
@@ -79,19 +79,19 @@ Simple:
 - **Liquidity**: 0.24 points per dollar per day
 - **Tiers**: Multiply everything up to 1.5x!
 
-### When moon... I mean, when token?
-The hx.finance token launches Soon™. We'll announce 30 days before. Follow our Twitter for the alpha!
+### When will the token launch?
+The hx.finance token generation event (TGE) date will be announced 30 days in advance through official channels.
 
 ### Can I buy points?
-Nope! That's the "fair" in fair launch. Points only come from using the platform. No shortcuts, everyone plays by the same rules.
+No. Points can only be earned through platform usage, ensuring fair distribution.
 
 ### What happens to my points?
-At TGE, your points convert to hx.finance tokens. Your share = your points ÷ total points × 33% of supply. Math is beautiful! 🧮
+At TGE, points convert to hx.finance tokens. Your allocation = (your points ÷ total points) × 33% of total supply.
 
-## Technical Stuff 🔧
+## Technical Information
 
 ### What chain is this on?
-Hyperliquid! Chain ID 999. It's the future - come join us!
+Hyperliquid (Chain ID: 999)
 
 ### How do I add Hyperliquid to MetaMask?
 We auto-add it when you connect! But here's the info:
@@ -102,24 +102,24 @@ Symbol: HYPE
 ```
 
 ### Is there an API?
-Yep! Subgraph endpoint for all your data needs:
+Yes. Subgraph endpoint:
 `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/moonswap-v3/hyperevm/gn`
 
-### Where's the code?
-GitHub coming soon! We're cleaning it up so it's pretty for you devs 💅
+### Where is the code?
+The repository will be made public on GitHub soon.
 
-## Ecosystem Questions 🌍
+## Ecosystem Questions
 
-### What's innocence.is?
-Our privacy layer! Trade privately without sacrificing speed or price. It's gonna be HUGE. Coming soon!
+### What is innocence.is?
+A privacy layer for trading that maintains speed and pricing efficiency. Currently in development.
 
-### What's HyperMoon?
-Our mobile trading app! Already live on Android, iOS coming. Trade from anywhere with pro features.
+### What is HyperMoon?
+The mobile trading application for hx.finance. Available on Android with iOS version in development.
 
 ### Are there NFTs?
-Two collections dropping soon! Real utility, not just JPEGs. Think governance, fee discounts, and more!
+Two NFT collections are planned with utility features including governance participation and fee discounts.
 
-## Getting Help 🤝
+## Getting Help
 
 ### Where do I get support?
 - **Discord** is best for quick help: [discord.gg/hxfinance](https://discord.gg/hxfinance)
@@ -127,56 +127,55 @@ Two collections dropping soon! Real utility, not just JPEGs. Think governance, f
 - **Telegram** for chat: [t.me/hxfinance](https://t.me/hxfinance)
 
 ### Found a bug?
-Thanks for looking out! Report it:
+Please report bugs through:
 - Discord #bug-reports channel
 - Email: bugs@hx.finance
-- Bug bounty program coming!
+- Bug bounty program (coming soon)
 
 ### How can I contribute?
-So many ways!
-- Provide liquidity 💧
-- Share feedback 💭
-- Help newbies in Discord 🤝
-- Build on our APIs 🛠️
-- Spread the word 📢
+- Provide liquidity
+- Share feedback
+- Assist community members
+- Build using our APIs
+- Promote the platform
 
-## Safety & Scams 🚨
+## Safety & Security
 
 ### How do I stay safe?
-**The basics:**
-- Bookmark https://app.hx.finance (only trust this URL!)
+**Security guidelines:**
+- Bookmark https://app.hx.finance (only official URL)
 - Never share your seed phrase
-- We'll NEVER DM you first
-- If it seems too good to be true, it is
+- Official support never initiates DMs
+- Be skeptical of unrealistic offers
 
 ### What are common scams?
-Watch out for:
-- Fake support DMs 
-- "Special token sales"
-- Phishing sites (hx-finance.com, hxfinance.com, etc.)
-- "Send 1 ETH, get 2 back" (seriously, don't)
+Be aware of:
+- Fake support messages
+- Unauthorized token sales
+- Phishing sites with similar URLs
+- Double-your-money schemes
 
-### Got scammed?
-Sorry friend 😢 Report it in Discord so we can warn others. Unfortunately, blockchain transactions can't be reversed.
+### What if I've been scammed?
+Report the incident in Discord to help protect others. Note that blockchain transactions cannot be reversed.
 
-## Lightning Round ⚡
+## Quick Reference
 
-**Mobile app?** HyperMoon on Android, iOS soon!
+**Mobile app?** HyperMoon on Android, iOS coming soon
 
-**Minimum trade?** No minimum to swap, but $10 minimum to earn points
+**Minimum trade?** No minimum for swaps; $10 minimum to earn points
 
-**Maximum trade?** Sky's the limit (check liquidity though)
+**Maximum trade?** No limit (subject to available liquidity)
 
-**Customer support?** Community support in Discord!
+**Customer support?** Community support via Discord
 
-**Token contract?** Coming at TGE!
+**Token contract?** Will be published at TGE
 
-**Audited?** Uniswap V3 is mega-audited. Our custom contracts pending.
+**Audited?** Using audited Uniswap V3 contracts; custom contracts under review
 
-**Hiring?** Always looking for legends. DM us!
+**Hiring?** Open positions available - contact via Discord
 
 ---
 
-*Still have questions? Jump in our Discord! The community is super friendly and someone's always around to help.* 💜
+*Additional questions? Join our Discord community for assistance.*
 
 **[Discord](https://discord.gg/hxfinance)** | **[Twitter](https://twitter.com/hxfinance)** | **[Start Trading](https://app.hx.finance)**
