Fix HYPE wrapping info - happens automatically

--- a/pages/getting-started/get-hype.mdx
+++ b/pages/getting-started/get-hype.mdx
@@ -38,22 +38,11 @@ If you prefer CEXs, HYPE is listed on:
 After purchasing, withdraw directly to your Hyperliquid EVM address.
 
 
-## Converting HYPE to WHYPE
+## HYPE to WHYPE Conversion
 
-Once you have HYPE, you need to wrap it to trade on hx.finance:
+When you trade on hx.finance, HYPE is automatically wrapped to WHYPE as needed. No manual wrapping is required - the interface handles this seamlessly during swaps.
 
-### Method 1: Using hx.finance Interface
-
-1. Go to [app.hx.finance](https://app.hx.finance)
-2. Click "Wrap" in the top menu
-3. Enter the amount of HYPE to wrap
-4. Click "Wrap HYPE"
-5. Confirm the transaction
-
-### Method 2: Direct Contract Interaction
-
-For advanced users, you can interact directly with the WHYPE contract:
-- **WHYPE Address**: `0x5555555555555555555555555555555555555555`
+**WHYPE Contract Address**: `0x5555555555555555555555555555555555555555`
 
 ## How Much Do You Need?
 
@@ -65,26 +54,12 @@ For advanced users, you can interact directly with the WHYPE contract:
 - **Minimum**: Enough for both tokens in your pair
 - **Recommended**: $100+ worth for meaningful positions
 
-## Quick Wrap/Unwrap
-
-### Wrap HYPE → WHYPE
-1. Click "Wrap" button
-2. Enter amount
-3. Confirm transaction
-4. Done! Your WHYPE appears instantly
-
-### Unwrap WHYPE → HYPE
-1. Click "Unwrap" button
-2. Enter amount
-3. Confirm transaction
-4. Done! Your HYPE is restored
-
 ## Important Notes
 
-- Keep some HYPE unwrapped for gas fees
-- Wrapping is instant and costs minimal gas
-- You can wrap/unwrap anytime with no fees (except gas)
-- WHYPE is required for all trading pairs
+- Keep HYPE in your wallet for gas fees
+- HYPE wrapping to WHYPE happens automatically when trading
+- No manual wrapping/unwrapping needed
+- The interface handles all conversions seamlessly
 
 ## Common Issues
 
