Fix broken internal links - remove /docs/ prefix

--- a/pages/ecosystem/overview.mdx
+++ b/pages/ecosystem/overview.mdx
@@ -158,8 +158,8 @@ We're building bridges with other Hyperliquid projects that share our values:
 
 ### As a User
 - [Start trading](https://app.hx.finance)
-- [Provide liquidity](/docs/liquidity/becoming-lp)
-- [Earn points](/docs/points-rewards/how-points-work)
+- [Provide liquidity](/liquidity/becoming-lp)
+- [Earn points](/points-rewards/how-points-work)
 - Share feedback
 
 ### As a Builder
