--- a/pages/getting-started/get-hype.mdx
+++ b/pages/getting-started/get-hype.mdx
@@ -75,7 +75,7 @@ When you trade on hx.finance, HYPE is automatically wrapped to WHYPE as needed. 
 
 ## Next Steps
 
-Now that you have HYPE and WHYPE:
-- [Make your first swap](/docs/getting-started/first-swap)
-- [Explore available trading pairs](/docs/trading/available-pairs)
-- [Learn about providing liquidity](/docs/liquidity/becoming-lp)
+Now that you have HYPE:
+- [Make your first swap](/getting-started/first-swap)
+- [Explore trading](/trading/how-to-swap)
+- [Learn about providing liquidity](/liquidity/becoming-lp)
