--- a/pages/token/fair-launch.mdx
+++ b/pages/token/fair-launch.mdx
@@ -255,6 +255,6 @@ Official channels only:
 ## Start Earning Points
 
 Every point counts toward your allocation:
-- [Start Trading](/docs/getting-started/first-swap)
-- [Provide Liquidity](/docs/liquidity/becoming-lp)
+- [Start Trading](/getting-started/first-swap)
+- [Provide Liquidity](/liquidity/becoming-lp)
 - [Check Your Points](https://hx.finance/points)
