--- a/pages/trading/how-to-swap.mdx
+++ b/pages/trading/how-to-swap.mdx
@@ -201,7 +201,7 @@ Using hx.finance on mobile:
 ## Next Steps
 
 Master these advanced topics:
-- [Understanding Slippage](/docs/trading/slippage)
-- [Advanced Trading Settings](/docs/trading/advanced-settings)
-- [Earning Through Trading](/docs/points-rewards/earning-strategies)
-- [Providing Liquidity](/docs/liquidity/becoming-lp)
+- [Understanding Slippage](/trading/slippage)
+- [Advanced Trading Settings](/trading/advanced-settings)
+- [Earning Through Trading](/points-rewards/earning-strategies)
+- [Providing Liquidity](/liquidity/becoming-lp)
