Remove broken links to non-existent pages

--- a/pages/trading/how-to-swap.mdx
+++ b/pages/trading/how-to-swap.mdx
@@ -200,8 +200,6 @@ Using hx.finance on mobile:
 
 ## Next Steps
 
-Master these advanced topics:
-- [Understanding Slippage](/trading/slippage)
-- [Advanced Trading Settings](/trading/advanced-settings)
-- [Earning Through Trading](/points-rewards/earning-strategies)
-- [Providing Liquidity](/liquidity/becoming-lp)
+- [Learn about Points](/points-rewards/how-points-work)
+- [Provide Liquidity](/liquidity/becoming-lp)
+- [View FAQ](/troubleshooting/faq)
