--- a/pages/liquidity/becoming-lp.mdx
+++ b/pages/liquidity/becoming-lp.mdx
@@ -261,7 +261,6 @@ A: WHYPE/USDE with ±30% range
 
 ## Next Steps
 
-- [Managing Positions](/liquidity/managing-positions)
-- [Understanding Fees](/liquidity/understanding-fees)
-- [Advanced LP Strategies](/liquidity/advanced-strategies)
-- [Calculating Returns](/liquidity/calculating-returns)
+- [Start Trading](/trading/how-to-swap)
+- [Learn about Points](/points-rewards/how-points-work)
+- [View FAQ](/troubleshooting/faq)
