--- a/pages/token/fair-launch.mdx
+++ b/pages/token/fair-launch.mdx
@@ -29,38 +29,46 @@ Distributed to points earners:
 - No vesting required
 - Immediate liquidity
 
-### Ecosystem Partners (15-20% TBD)
+### Initial Liquidity (10%)
+Protocol-owned liquidity:
+- Paired with HYPE for HX/HYPE pool
+- Additional pairs as needed (HX/USDE, HX/UETH)
+- Locked for minimum 1 year
+- Provides price stability at launch
+
+### Ecosystem Partners (10-15%)
 Supporting aligned Hyperliquid projects:
 - Projects sharing HL ethos
 - Strengthen ecosystem
 - Cross-protocol benefits
 
-### Liquidity Mining (20%)
+### Liquidity Mining (15%)
 Future rewards:
 - LP incentives
 - Trading rewards
 - Long-term sustainability
 
-### Treasury (15-20%)
+### Treasury (15%)
 DAO-controlled:
 - Development funding
 - Partnerships
 - Emergency reserves
 - Community proposals
 
-### Team & Advisors (10-15%)
+### Team & Advisors (10%)
 Aligned incentives:
 - 6-month cliff
 - 2-year vesting
 - Performance-based
 
-### Reserve (5-10%)
+### Strategic Reserve (7-12%)
 Future needs:
 - CEX listings
 - Market making
+- Bridge liquidity
 - Unforeseen requirements
 
-*Final percentages to be announced*
+**Total: 100%**
 
 ## Points → Token Conversion
 
