Add fair usage and anti-abuse policy to points documentation

--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -148,6 +148,32 @@ A: Follow official announcements for updates.
 **Q: Can I start earning points at any time?**
 A: Yes, you can begin earning points immediately.
 
+## Fair Usage & Anti-Abuse
+
+### Our Commitment
+Points are designed to reward genuine platform usage. We actively monitor for and prevent manipulation to ensure fair distribution to real users who contribute to the ecosystem.
+
+### Prohibited Activities
+- **Sybil attacks** - Multiple accounts controlled by one entity
+- **Wash trading** - Artificial volume through self-trading
+- **Gaming the system** - Exploiting loopholes or unintended mechanics
+- **Bot manipulation** - Automated activity designed solely to farm points
+
+### Enforcement
+Accounts engaging in suspicious activity may face:
+- Points reduction or removal
+- Account restrictions
+- Exclusion from token distribution
+
+### Formula Updates
+The points calculation formula:
+- Updates periodically to maintain fairness
+- Rewards consistent, organic activity
+- Remains undisclosed to prevent exploitation
+- Adapts to changing platform dynamics
+
+Our priority is rewarding authentic participation. Users who engage naturally with the platform will always benefit most.
+
 ## Getting Started
 
 1. **Begin earning** - All amounts contribute to your total
