Add USD₮0 and WHYPE/USD₮0 pool to documentation

--- a/pages/liquidity/becoming-lp.mdx
+++ b/pages/liquidity/becoming-lp.mdx
@@ -51,8 +51,11 @@ Navigate to the [Pools page](https://hx.finance/pools)
 
 **Popular Pools:**
 - WHYPE/USDE (High volume)
+- WHYPE/USD₮0 (High volume)
+- WHYPE/USDXL (High volume)
 - UETH/USDE (Stable earnings)
 - UBTC/USDE (Growing volume)
+- BUDDY/USDE (Community favorite)
 
 **Consider:**
 - 24h Volume (Higher = More fees)
