--- a/pages/troubleshooting/faq.mdx
+++ b/pages/troubleshooting/faq.mdx
@@ -28,6 +28,9 @@ Currently supported tokens:
 - **USDE** - Ethena USD stablecoin
 - **UETH** - Wrapped ETH
 - **UBTC** - Wrapped Bitcoin
+- **USD₮0** - USDT0 stablecoin
+- **USDXL** - Last USD stablecoin
+- **BUDDY** - alright buddy token
 
 Additional tokens will be added based on community demand.
 
