--- a/pages/trading/how-to-swap.mdx
+++ b/pages/trading/how-to-swap.mdx
@@ -54,7 +54,7 @@ Automatically routes through multiple pools for best price:
 ### Step 3: Price Information
 
 **Exchange Rate**
-- Shows current rate (e.g., 1 WHYPE = 50.25 USDE)
+- Shows current rate 
 - Click to invert display
 - Updates in real-time
 
